Removed base paths "oauth2", "auth".
